--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,49 @@
 #map {
-    height: 100vh;
-    width: 100vw;
+    height: 80vh;
+    width: 90vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 
 
 /* 
-green: 759C57
-red: C13943
-beige: FBEEA1
-black: 000000
-brown: 857751
-tuborg: EBAB47
+green: #759C57;
+red: #C13943;
+beige: #FBEEA1;
+black: #000000;
+brown: #857751;
+tuborg: #EBAB47;
 */
+
+:root {
+    --green: #759C57;
+    --red: #C13943;
+    --beige: #FBEEA1;
+    --black: #000000;
+    --brown: #857751;
+    --tuborg: #EBAB47;
+}
+
+body {
+    background-color: var(--green);
+    color: var(--red)
+}
+
+#header {
+    height: 11vh;
+}
+
+#logo {
+    height: 100%;
+    margin-left: 5vw;
+}
+
+/* #footer {
+    background-color: var(--beige);
+    text-align: center;
+    height: 3vh;
+    width: 100vw;
+    margin-top: 7vh;
+    margin-left: 0;
+    margin-right: 0;
+} */
